--- a/README
+++ b/README
@@ -1,3 +1,22 @@
+VIDEO: PLS DIGITAL
+📒 Descrição
+Este vídeo gerado por IA apresenta uma visão rápida da PLS DIGITAL para uso em financiamentos para construçao individual PF
+
+🤖 Tecnologias Utilizadas
+Mootion
+
+🧐 Processo de Criação
+Usado o mootion para geração vídeo. 
+
+🚀 Resultados
+O vídeo é uma pequena apresentação da ferramente que está em piloto nas agencias da SR SERGIPE e NORTE DO PARANÁ.
+
+LINK PARA O VÍDEO AQUI
+https://drive.google.com/file/d/1JXqWRxc3dS5KB1_R89GtAUon5gMNJTD3/view?usp=drive_link
+(O video ficou grande demais para ser armazenado no github)
+
+PROMPT
+
 Gere um pequeno filme sobre a PLS DIGITAL em tom informal e simples, direcionado para clientes da CAIXA e responsáveis engenheiros civis. 
 
 [CENA ] O que é a PLS DIGITAL: 
